--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -144,13 +144,14 @@
 		margin-left: -2px
 		
 		.heading
-			text-align: center
 			margin-top: 20px
 	
 			h2
 				font: normal 14px/22px 'Helvetica Neue Light', 'HelveticaNeue-Light', 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif
+				text-align: center
 			h3
 				font: normal 11px/11px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+				text-align: center
 				margin: 5px 0
 
 			img
